--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">google-site-verification: google1bc172dbadb73528.html
   
 
 <head>
-
+google-site-verification: google1bc172dbadb73528.html
 
 <!-- Created by CPAZip.com- Free Landing Pages and CPA Methods
 
